# JAM_DL

./: .editorconfig  .gitmodules  GAM_DL_GAM_DL_fire.c  GAM_DL_fire  GAM_DL_fire.c  GAM_DL_flex.c  README.md
gam_gen/: Makefile  gam_gen  gam_gen.c
include/: GAM_DL.h  GAM_DL_.h  GAM_DL_core.h  GAM_DL_draw.h  GAM_DL_events.h  GAM_DL_texture.h
log/: log_simon.txt
sdl3-game/: CMakeLists.txt  Makefile  README.md  assets
sdl3-game/include/: GAM_DL_window.h  game.h
sdl3-game/src/: GAM_DL_window.c  game.c  graphics.c  graphics.h  main.c  window.c  window.h
sdl3-game/web/: index.html
src/: GAM_DL_CoreExit.c  GAM_DL_CoreMainWindowShow.c  GAM_DL_CoreWindowPop.c  GAM_DL_EventHandle.c  GAM_DL_TextureLoad.c  GAM_DL_WindowPop.c
